stderr
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! @ lint: `eslint --config ${CYBER_DOJO_SANDBOX}/.eslintrc.json /**/*.js`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the @ lint script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/sandbox/.npm/_logs/2023-01-22T10_51_12_572Z-debug.log
FAIL ./hundred_doors.test.js
  â— Test suite failed to run

    SyntaxError: /sandbox/hundred_doors.test.js: Unexpected token, expected "," (11:2)

       9 |   it('should have only open or closed states', () => {
      10 |     expect(/[^@#]/.test(hundredDoors()).toBeFalse()
    > 11 |   });
         |   ^
      12 | });
      13 |

      at Parser._raise (../etc/jest/node_modules/@babel/parser/src/parser/error.js:60:45)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        1.426 s
Ran all test suites.
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! @ test: `jest --coverage`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the @ test script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/sandbox/.npm/_logs/2023-01-22T10_51_14_999Z-debug.log
